# tcs-assignment

./: LICENSE  README.md  main.py  pyproject.toml
data/: Data_neuron.txt
src/tcs/: __init__.py  neuron.py  supreme_court.py
