[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tcs-assignment"
version = "0.1.0"
description = "A package for simulating theoretical complex systems."
authors = [
  { name="Zainab Nasser", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

